src/test/ui/error-codes/E0428.stderr
error[E0428]: the name `Bar` is defined multiple times
  --> $DIR/E0428.rs:2:1
   |
LL | struct Bar;
   | ----------- previous definition of the type `Bar` here
LL | struct Bar;
   | ^^^^^^^^^^^ `Bar` redefined here
   |
   = note: `Bar` must be defined only once in the type namespace of this module

error: aborting due to previous error

For more information about this error, try `rustc --explain E0428`.
